--- a/web/assets/static/css/cadastrar-login.css
+++ b/web/assets/static/css/cadastrar-login.css
@@ -81,11 +81,6 @@ body {
 
 /* login-container */
 
-.login-container {
-    
-    /* background-color: blueviolet; */
-}
-
 .login-container h2 {
     margin-top: 40px;
     font-size: 40px;
@@ -112,12 +107,14 @@ label {
     color: white;
     cursor: pointer;
     font-size: 100%;
+    font-weight: bold;
+    padding: 3%;
     margin-bottom: 15%;
     width: 115%;
-    padding: 3%;
 }
 
 .input-submit:hover {
-    font-weight: bold;
+    /* transition: .1s; */
+    transform:scale(1.1);
 }
 
